# RogueLike-FelixEdition

./: .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  run.sh  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: Constants.hpp  Game.hpp  Makefile  MapManager.hpp  Types.hpp  cmake_install.cmake
source/: Game.cpp  MapManager.cpp  lib.cpp
test/: CMakeLists.txt
test/source/: dest_test.cpp  m3_test.cpp
